--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "es6-promise": "^3.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
