Setting up Karma

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --optimize-minimize",
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/karma/bin/karma start --single-run --no-auto-watch karma.config.js",
+    "test-watch": "./node_modules/karma/bin/karma start --auto-watch --no-single-run karma.config.js"
   },
   "author": "eduter",
   "license": "ISC",
@@ -17,8 +18,14 @@
     "css-loader": "^0.23.1",
     "es6-promise": "^3.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jasmine-core": "^2.4.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-webpack": "^1.7.0",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
