--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "core-js": "^2.3.0",
     "css-loader": "^0.23.1",
     "es6-promise": "^3.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
